# keryx

./: .gitignore  README.md  bts.jsonc  package.json  plan.md  tsconfig.json
apps/tui/: package.json
apps/tui/src/: App.tsx  index.tsx
apps/tui/src/components/: ConnectionScreen.tsx  LoginScreen.tsx  Logo.tsx  QueryScreen.tsx  ResultsTable.tsx  TableBrowser.tsx
apps/tui/src/contexts/: AppContext.tsx
apps/tui/src/features/browse/: BrowseView.tsx  index.ts
apps/tui/src/features/browse/components/: DataPanel.tsx  DatabaseTree.tsx  TableHeader.tsx  TreeNode.tsx
apps/tui/src/features/login/: LoginScreen.tsx  index.ts
apps/tui/src/features/query/: QueryPanel.tsx  index.ts
apps/tui/src/features/query/components/: QueryResults.tsx  SQLEditor.tsx
apps/tui/src/hooks/: useBackend.ts  usePanelFocus.ts
apps/tui/src/layouts/: MainLayout.tsx
apps/tui/src/shared/components/: BorderedBox.tsx  KeyboardHints.tsx  StatusIndicator.tsx  index.ts
apps/tui/src/shared/theme/: colors.ts
apps/tui/src/types/: index.ts
backend/: Cargo.toml
backend/src/: main.rs  pg.rs
backend/src/db/: client.rs  helpers.rs  mod.rs  queries.rs  types.rs
