[package]
name = "keryx-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keryx-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
